--- a/src/main/resources/assets/integratednbt/lang/en_us.lang
+++ b/src/main/resources/assets/integratednbt/lang/en_us.lang
@@ -21,9 +21,18 @@ integratednbt:nbt_extractor.tooltip.right_click_expand=§8§o- Right click to ex
 integratednbt:nbt_extractor.tooltip.right_click_collapse=§8§o- Right click to collapse
 integratednbt:nbt_extractor.tooltip.selecting=§cWaiting for server to confirm selection...
 integratednbt:nbt_extractor.tooltip.selected=§aPath selected! Place a variable into the right slot to receive its value.
+integratednbt:nbt_extractor.output_mode=Output Mode: %s
+integratednbt:nbt_extractor.output_mode.reference=§eReference Mode
+integratednbt:nbt_extractor.output_mode.operator=§2Operator Mode
+integratednbt:nbt_extractor.output_mode.value=§6Value Mode
+integratednbt:nbt_extractor.output_mode.description=§7Output Mode controls how the output value is being created.\n\n§7- In §eReference Mode§7, output values are being created with a reference to the source NBT variable.\n§7- In §2Operator Mode§7, an operator that accepts NBT and returns the extracted value is created from the extraction process. The resulting operator is not related to the source NBT variable.\n§7- In §6Value Mode§7, the value present is written to the output variable as a constant.\n\n§7If you don't understand this, stick with §eReference Mode§7.
 integratednbt:nbt_extracted_variable.tooltip.source_nbt_id=§eExtract From: §r%s
 integratednbt:nbt_extracted_variable.tooltip.path=§eExtraction Path: §r%s
 integratednbt:nbt_extracted_variable.tooltip.default_value=§eDefault Value: §r%s
+
+integratednbt:nbt_extraction_operator.name=Extraction
+integratednbt:nbt_extraction_operator.category_name=NBT
+integratednbt:nbt_extraction_operator.full_name=NBT Extraction
 
 integratednbt:nbt_extractor_remote.bind_successful=Successfully bound remote to the NBT Extractor at (%s, %s, %s).
 integratednbt:nbt_extractor_remote.need_bind=Please right click a NBT Extractor block to bind this remote first.
