Add an option to disable auto refresh

--- a/src/main/resources/assets/integratednbt/lang/en_us.lang
+++ b/src/main/resources/assets/integratednbt/lang/en_us.lang
@@ -26,6 +26,10 @@ integratednbt:nbt_extractor.output_mode.reference=§eReference Mode
 integratednbt:nbt_extractor.output_mode.operator=§2Operator Mode
 integratednbt:nbt_extractor.output_mode.value=§6Value Mode
 integratednbt:nbt_extractor.output_mode.description=§7Output Mode controls how the output value is being created.\n\n§7- In §eReference Mode§7, output values are being created with a reference to the source NBT variable.\n§7- In §2Operator Mode§7, an operator that accepts NBT and returns the extracted value is created from the extraction process. The resulting operator is not related to the source NBT variable.\n§7- In §6Value Mode§7, the value present is written to the output variable as a constant.\n\n§7If you don't understand this, stick with §eReference Mode§7.
+integratednbt:nbt_extractor.auto_refresh=Auto Refresh: %s
+integratednbt:nbt_extractor.auto_refresh.on=§aON
+integratednbt:nbt_extractor.auto_refresh.off=§cOFF
+integratednbt:nbt_extractor.auto_refresh.description=§7Auto Refresh controls whether this NBT Extractor should automatically refresh the NBT tree when the source NBT variable is updated. You may freeze the current displaying NBT value by turning this option to §cOFF§7.
 integratednbt:nbt_extracted_variable.tooltip.source_nbt_id=§eExtract From: §r%s
 integratednbt:nbt_extracted_variable.tooltip.path=§eExtraction Path: §r%s
 integratednbt:nbt_extracted_variable.tooltip.default_value=§eDefault Value: §r%s
