--- a/src/main/resources/assets/integratednbt/lang/zh_cn.lang
+++ b/src/main/resources/assets/integratednbt/lang/zh_cn.lang
@@ -26,6 +26,10 @@ integratednbt:nbt_extractor.output_mode.reference=§e引用模式
 integratednbt:nbt_extractor.output_mode.operator=§2运算符模式
 integratednbt:nbt_extractor.output_mode.value=§6常量模式
 integratednbt:nbt_extractor.output_mode.description=§7输出模式决定了提取结果是如何输出到变量卡的。\n\n§7- 在§e引用模式§7中，输出的变量将会关联到创建时使用的 NBT 变量。\n§7- 在§2操作符模式§7中，输出的变量将会被写入一个输入 NBT 输出提取结果的操作符。这个操作符与之前使用的 NBT 变量并没有直接联系。\n§7- 在§6常量模式§7中，写入输出变量的值仅取决于写入时 NBT 变量的值，因此创建出来的是一个常量。\n\n§7如果不明白这是什么意思，请使用§e引用模式§7。
+integratednbt:nbt_extractor.auto_refresh=自动刷新: %s
+integratednbt:nbt_extractor.auto_refresh.on=§a启用
+integratednbt:nbt_extractor.auto_refresh.off=§c禁用
+integratednbt:nbt_extractor.auto_refresh.description=§7禁用自动刷新将会将使用的 NBT 数据定格在禁用的那一瞬间。
 integratednbt:nbt_extracted_variable.tooltip.source_nbt_id=§e提取自: §r%s
 integratednbt:nbt_extracted_variable.tooltip.path=§e提取路径: §r%s
 integratednbt:nbt_extracted_variable.tooltip.default_value=§e默认值: §r%s
