Refactor output mode selection code

--- a/src/main/resources/assets/integratednbt/lang/en_us.json
+++ b/src/main/resources/assets/integratednbt/lang/en_us.json
@@ -2,6 +2,7 @@
   "itemGroup.integratednbt": "Integrated NBT",
   "block.integratednbt.nbt_extractor": "NBT Extractor",
   "item.integratednbt.nbt_extractor_remote": "NBT Extractor Remote",
+
   "integratednbt:nbt_extractor.welcome": "Welcome",
   "integratednbt:nbt_extractor.welcome.description": "This is a NBT Extractor. To start, place a variable of type NBT into the left slot.",
   "integratednbt:nbt_extractor.loading": "Loading",
@@ -24,10 +25,14 @@
   "integratednbt:nbt_extractor.tooltip.selecting": "§cWaiting for server to confirm selection...",
   "integratednbt:nbt_extractor.tooltip.selected": "§aPath selected! Place a variable into the right slot to receive its value.",
   "integratednbt:nbt_extractor.output_mode": "Output Mode: %s",
-  "integratednbt:nbt_extractor.output_mode.reference": "§eReference Mode",
-  "integratednbt:nbt_extractor.output_mode.operator": "§2Operator Mode",
-  "integratednbt:nbt_extractor.output_mode.value": "§6Value Mode",
-  "integratednbt:nbt_extractor.output_mode.description": "§7Output Mode controls how the output value is being created.\\n\\n§7- In §eReference Mode§7, output values are being created with a reference to the source NBT variable.\\n§7- In §2Operator Mode§7, an operator that accepts NBT and returns the extracted value is created from the extraction process. The resulting operator is not related to the source NBT variable.\\n§7- In §6Value Mode§7, the value present is written to the output variable as a constant.\\n\\n§7If you don't understand this, stick with §eReference Mode§7.",
+  "integratednbt:nbt_extractor.output_mode.reference.name": "Reference Mode",
+  "integratednbt:nbt_extractor.output_mode.reference.description": "- In %s, output values are being created with a reference to the source NBT variable.",
+  "integratednbt:nbt_extractor.output_mode.operator.name": "Operator Mode",
+  "integratednbt:nbt_extractor.output_mode.operator.description": "- In %s, an operator that accepts NBT and returns the extracted value is created from the extraction process. The resulting operator is not related to the source NBT variable.",
+  "integratednbt:nbt_extractor.output_mode.value.name": "Value Mode",
+  "integratednbt:nbt_extractor.output_mode.value.description": "- In %s, the value present is written to the output variable as a constant.",
+  "integratednbt:nbt_extractor.output_mode.description.begin": "Output Mode controls how the output value is being created.",
+  "integratednbt:nbt_extractor.output_mode.description.end": "If you don't understand this, stick with %s.",
   "integratednbt:nbt_extractor.auto_refresh": "Auto Refresh: %s",
   "integratednbt:nbt_extractor.auto_refresh.on": "§aON",
   "integratednbt:nbt_extractor.auto_refresh.off": "§cOFF",
