--- a/src/main/resources/assets/integratednbt/lang/zh_cn.json
+++ b/src/main/resources/assets/integratednbt/lang/zh_cn.json
@@ -2,6 +2,7 @@
   "itemGroup.integratednbt": "NBT 联合",
   "block.integratednbt.nbt_extractor": "NBT 提取器",
   "item.integratednbt.nbt_extractor_remote": "远程 NBT 提取器",
+
   "integratednbt:nbt_extractor.welcome": "欢迎",
   "integratednbt:nbt_extractor.welcome.description": "这是一台 NBT 提取器。请将一个 NBT 类型的变量卡放入左侧格子中来使用。",
   "integratednbt:nbt_extractor.loading": "加载中",
@@ -24,10 +25,14 @@
   "integratednbt:nbt_extractor.tooltip.selecting": "§c等待服务器确认选择...",
   "integratednbt:nbt_extractor.tooltip.selected": "§a已选择，将一个变量卡放在右侧格子上中来写入。",
   "integratednbt:nbt_extractor.output_mode": "输出模式: %s",
-  "integratednbt:nbt_extractor.output_mode.reference": "§e引用模式",
-  "integratednbt:nbt_extractor.output_mode.operator": "§2运算符模式",
-  "integratednbt:nbt_extractor.output_mode.value": "§6常量模式",
-  "integratednbt:nbt_extractor.output_mode.description": "§7输出模式决定了提取结果是如何输出到变量卡的。\\n\\n§7- 在§e引用模式§7中，输出的变量将会关联到创建时使用的 NBT 变量。\\n§7- 在§2操作符模式§7中，输出的变量将会被写入一个输入 NBT 输出提取结果的操作符。这个操作符与之前使用的 NBT 变量并没有直接联系。\\n§7- 在§6常量模式§7中，写入输出变量的值仅取决于写入时 NBT 变量的值，因此创建出来的是一个常量。\\n\\n§7如果不明白这是什么意思，请使用§e引用模式§7。",
+  "integratednbt:nbt_extractor.output_mode.reference.name": "引用模式",
+  "integratednbt:nbt_extractor.output_mode.reference.description": "- 在%s中，输出的变量将会关联到创建时使用的 NBT 变量。",
+  "integratednbt:nbt_extractor.output_mode.operator.name": "运算符模式",
+  "integratednbt:nbt_extractor.output_mode.operator.description": "- 在%s中，输出的变量将会被写入一个输入 NBT 输出提取结果的操作符。这个操作符与之前使用的 NBT 变量并没有直接联系。",
+  "integratednbt:nbt_extractor.output_mode.value.name": "常量模式",
+  "integratednbt:nbt_extractor.output_mode.value.description": "- 在%s中，写入输出变量的值仅取决于写入时 NBT 变量的值，因此创建出来的是一个常量。",
+  "integratednbt:nbt_extractor.output_mode.description.begin": "输出模式决定了提取结果是如何输出到变量卡的。",
+  "integratednbt:nbt_extractor.output_mode.description.end": "如果不明白这是什么意思，请使用%s。",
   "integratednbt:nbt_extractor.auto_refresh": "自动刷新: %s",
   "integratednbt:nbt_extractor.auto_refresh.on": "§a启用",
   "integratednbt:nbt_extractor.auto_refresh.off": "§c禁用",
