Add NBT Path output mode

--- a/src/main/resources/assets/integratednbt/lang/zh_cn.json
+++ b/src/main/resources/assets/integratednbt/lang/zh_cn.json
@@ -28,9 +28,11 @@
   "integratednbt:nbt_extractor.output_mode.reference.name": "引用模式",
   "integratednbt:nbt_extractor.output_mode.reference.description": "- 在%s中，输出的变量将会关联到创建时使用的 NBT 变量。",
   "integratednbt:nbt_extractor.output_mode.operator.name": "运算符模式",
-  "integratednbt:nbt_extractor.output_mode.operator.description": "- 在%s中，输出的变量将会被写入一个输入 NBT 输出提取结果的操作符。这个操作符与之前使用的 NBT 变量并没有直接联系。",
+  "integratednbt:nbt_extractor.output_mode.operator.description": "- 在%s中，当前提取过程会被会被写入一个输入 NBT 输出提取结果的操作符。",
   "integratednbt:nbt_extractor.output_mode.value.name": "常量模式",
   "integratednbt:nbt_extractor.output_mode.value.description": "- 在%s中，写入输出变量的值仅取决于写入时 NBT 变量的值，因此创建出来的是一个常量。",
+  "integratednbt:nbt_extractor.output_mode.nbt_path.name": "NBT 匹配路径模式",
+  "integratednbt:nbt_extractor.output_mode.nbt_path.description": "- 在%s中，当前提取过程将会被转换为 CyclopsCore 的 NBT 匹配路径并写入输出变量。",
   "integratednbt:nbt_extractor.output_mode.description.begin": "输出模式决定了提取结果是如何输出到变量卡的。",
   "integratednbt:nbt_extractor.output_mode.description.end": "如果不明白这是什么意思，请使用%s。",
   "integratednbt:nbt_extractor.auto_refresh": "自动刷新: %s",
